# fundot

./: .clang-format  .gitignore  CMakeLists.txt  Documentation.md  Doxyfile  FUNDOTDOC.md  JIADOC.md  JIATUTORIAL.md  LICENSE  Makefile  README.md  README.zh.md  Tutorial.md  debug.c  debug.h  fun.c  fun_map.c  fun_map.h  fundot  fundot.c  fundotio.c  fundotlib.c  fundotlib.h  init.fun  jia  jia.c  jia.cpp  jiaio.c  jiaio.h  jialib.c  jialib.h  macro.h  mkdocs.yml  str.c  str.h  str_map.c  str_map.h  str_pair.c  strv.c  strv.h
core/: CMakeLists.txt  boolean.cpp  boolean.h  function.cpp  function.h  list.cpp  list.h  main.cpp  null.cpp  null.h  number.cpp  number.h  pair.cpp  pair.h  parser.cpp  parser.h  quote.cpp  quote.h  set.cpp  set.h  string.cpp  string.h  symbol.cpp  symbol.h  vector.cpp  vector.h
doc/: cheatsheet.md  cpp_style.md  quick_guide.md
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  cheatsheet.md  cpp_style.md  guide.md  guide.zh.md  index.md  specification.md
docs/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_rela.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
docs/doxygen/html/d0/d00/: classfundot_1_1_fundot.html  classfundot_1_1_fundot.js
docs/doxygen/html/d1/d03/: namespacefundot.html  namespacefundot.js
docs/doxygen/html/d1/d17/: classfundot_1_1_identifier.html  classfundot_1_1_identifier.js
docs/doxygen/html/d2/dab/: classfundot_1_1_object-members.html
docs/doxygen/html/d5/db3/: classfundot_1_1_object.html  classfundot_1_1_object.js
docs/doxygen/html/d7/da7/: identifier_8h.html  identifier_8h_source.html
docs/doxygen/html/d8/dde/: classfundot_1_1_identifier-members.html
docs/doxygen/html/de/d10/: object_8h.html  object_8h_source.html
docs/doxygen/html/de/d26/: classfundot_1_1_fundot-members.html
docs/doxygen/html/de/db4/: fundot_8h.html  fundot_8h_source.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  related_0.js  searchdata.js
docs/doxygen/latex/: annotated.tex  files.tex  namespaces.tex  refman.tex
docs/doxygen/latex/d0/d00/: classfundot_1_1_fundot.tex
docs/doxygen/latex/d1/d03/: namespacefundot.tex
docs/doxygen/latex/d1/d17/: classfundot_1_1_identifier.tex
docs/doxygen/latex/d5/db3/: classfundot_1_1_object.tex
docs/doxygen/latex/d7/da7/: identifier_8h.tex
docs/doxygen/latex/de/d10/: object_8h.tex
docs/doxygen/latex/de/db4/: fundot_8h.tex
fundot/: CMakeLists.txt  fundot.cpp
fundot/core/: CMakeLists.txt  boolean.cpp  function.h  list.cpp  list.h  null.cpp  number.cpp  object.cpp  object.h  pair.cpp  pair.h  parser.cpp  parser.h  quote.cpp  quote.h  set.cpp  set.h  string.cpp  symbol.cpp  vector.cpp  vector.h
fundot/repl/: CMakeLists.txt  reader.cpp  reader.h  repl.cpp  repl.h
fundot/std/: CMakeLists.txt  addition.cpp  addition.h  builtins.cpp  builtins.h  conj.cpp  division.cpp  division.h  equal_to.cpp  equal_to.h  eval.cpp  greater_than.cpp  greater_than.h  greater_than_or_equal_to.cpp  greater_than_or_equal_to.h  less_than.cpp  less_than.h  less_than_or_equal_to.cpp  less_than_or_equal_to.h  let.cpp  load.cpp  logical_and.cpp  logical_and.h  logical_not.cpp  logical_not.h  logical_or.cpp  logical_or.h  modulo.cpp  modulo.h  multiplication.cpp  multiplication.h  not_equal_to.cpp  not_equal_to.h  pop.cpp  print.cpp  push.cpp  read.cpp  read_line.cpp  subtraction.cpp  subtraction.h  (+5 more)
include/: debug.h  expression.h  fun.h  function.h  fundot-eval.h  fundot-io.h  fundot-list.h  fundot-object.h  fundot-pair.h  fundot-string.h  fundot-symbol.h  fundot-unordered-set.h  fundot-utility.h  fundot-vector.h  fundot.h  fundot_eval.h  fundot_io.h  fundot_list.h  fundot_string.h  fundot_symbol.h  fundot_type.h  fundot_utility.h  fundot_vector.h  fundotio.h  fundotlib.h  global.h  identifier.h  lexer.h  library.h  macro.h  object.h  parser.h  scanner.h  str.h  str_pair.h  strv.h  token.h
include/fundot/: fundot.h  object.h  types.h
objects/: CMakeLists.txt  append.cpp  close.cpp  count.cpp  do.cpp  expand.cpp  hash.cpp  insert.cpp  lambda.cpp  open.cpp  pop.cpp  print.cpp  quit.cpp  quote.cpp  read.cpp  remove.cpp
repl/: CMakeLists.txt  fundot.cpp  reader.cpp  reader.h  repl.cpp  repl.h
src/: CMakeLists.txt  arithmetic.cpp  bitwise.cpp  built_in.cpp  built_in.h  cfun.cpp  comparison.cpp  debug.c  eval.cpp  expression.cpp  fun.c  fun_map.c  function.cpp  fundot-eval.cpp  fundot-io.cpp  fundot-object.cpp  fundot-string.cpp  fundot-symbol.cpp  fundot-utility.cpp  fundot-utility.hpp  fundot.c  fundot.cpp  fundot_eval.cpp  fundot_io.cpp  fundot_type.cpp  fundot_utility.cpp  fundot_utility.hpp  fundotio.c  fundotlib.c  global.cpp  hash.cpp  input.cpp  lexer.cpp  library.cpp  logical.cpp  main.cpp  object.cpp  object.h  output.cpp  parser.cpp  (+7 more)
std/: CMakeLists.txt  add.cpp  addition.cpp  addition.h  builtins.cpp  builtins.h  cond.cpp  conj.cpp  count.cpp  division.h  equal_to.h  greater_than.h  greater_than_or_equal_to.h  less_than.h  less_than_or_equal_to.cpp  less_than_or_equal_to.h  logical_and.h  logical_not.cpp  logical_not.h  logical_or.h  modulo.cpp  modulo.h  multiplication.h  not_equal_to.h  print.cpp  subtraction.cpp  subtraction.h  unary_minus.cpp  unary_minus.h  unary_plus.cpp  unary_plus.h
tests/: CMakeLists.txt
tests/libfundot/: CMakeLists.txt  main.c
