add_library(fundot_core
            object.cpp
            null.cpp
            boolean.cpp
            number.cpp
            string.cpp
            symbol.cpp
            quote.cpp
            pair.cpp
            vector.cpp
            set.cpp
            function.cpp
            parser.cpp
            )
